@@ -1,5 +1,8 @@
 2010-03-19  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* testsuite/TestMLPSolver.cpp: Adding a test case for C contains more than one element when enter comp().
+	* examples/module-Cs.hex: Likewise.
+
 	* include/dlvhex/MLPSolver.hpp: Updating the answer set counter printing.
 
 2010-03-18  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
